dev/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite
  namespace: devops-tools
spec:
  replacePathRegex:
    regex: ".*"
    replacement: "/"
