dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: api-dev-local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-dev
            port:
              number: 80
  - host: api-sit-local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 80
